# vasavi

./: .env.example  .gitignore  README.md  User_ID_profile.xlsx  pyproject.toml  requirements.txt  sample_posts.json  taste_profiles.csv  taste_profiles.json
tests/: conftest.py  test_processor.py  test_server.py  test_service.py
tools/: convert_excel.py
vasuvi/: .gitignore  __init__.py  config.py  core.py  db.py  jobs.py  llm.py  models.py  processor.py  profiletaste.py  server.py
