[project]
name = "vasuvi"
version = "0.1.0"
description = "Service for generating and caching user taste profiles"
authors = [
    {name = "recz team", email = "dev@example.com"}
]

# use a subset of dependencies required for running the API and library
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.23.0",
    "pandas>=2.0",
    "pymysql>=1.0",
    "anthropic>=0.50",
    "pydantic>=1.10",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vasuvi"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
